--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.gitlab.fisvse.burm10.adventura</groupId>
-  <artifactId>adventura</artifactId>
+  <groupId>com.gitlab.fisvse.burm10.projektadventura</groupId>
+  <artifactId>projekt-adventura</artifactId>
   <version>1.0.0-SNAPSHOT</version>
 
 
@@ -75,7 +75,7 @@
               <configuration>
                   <archive>
                   <manifest><addClasspath>true</addClasspath>
-                    <mainClass>com.gitlab.fisvse.burm10.Start</mainClass>
+                    <mainClass>com.gitlab.fisvse.burm10.projektadventura.Start</mainClass>
                   </manifest>
                   </archive>
               </configuration>
